View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026960 | Open CASCADE | OCCT:Visualization | public | 2015-12-07 14:31 | 2021-02-27 09:54 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026960: Visualization, TKOpenGl - update transformation of dynamically highlighted presentation | ||||
Description | Presentation manager does not update transformation of shadow structure used for dynamical highlighting causing visual artifacts. | ||||
Steps To Reproduce | pload VISUALIZATION MODELING box b 1 2 3 vclear vinit View1 vdisplay -dispmode 1 -highmode 1 b vfit vmoveto 250 250 vsetlocation b 0.5 0 0 vreadpixel 100 100 rgb name # expected color: BLACK # actual color: CYAN1 | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug26960 | ||||
|
prs_ghost.png (2,609 bytes) |
|
Branch CR26960 has been created by kgv. SHA-1: a45da9d4fb1701bbd8b2268b64f491481197f3e8 Detailed log of new commits: Author: kgv Date: Mon Dec 7 14:32:31 2015 +0300 0026960: Visualization, TKOpenGl - update transformation of dynamically highlighted presentation OpenGl_StructureShadow::Render() - take transformation of parent structure on each redraw. |
|
Branch CR26960_1 has been created by vpa. SHA-1: ece681db5a1372109f6610494a77983e7f86825f Detailed log of new commits: Author: vpa Date: Fri Dec 18 21:29:13 2015 +0300 0026960: Visualization, TKOpenGl - update transformation of dynamically highlighted presentation - added method UpdateHighlightTrsf for immediate update of highlight presentation's transformation; - interfaces for immediate transformation update of corresponding presentations were added to entity owner classes; - test case for issue 0026960 |
|
Branch CR26960_1 has been updated forcibly by vpa. SHA-1: 4f785a40a776663c76872d821909e4033bf76c7b |
|
Dear Kirill, please review patch in branch CR26960_1. |
|
Please test the patch. |
|
Dear BugMaster, Branch CR26960_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 4f785a40a776663c76872d821909e4033bf76c7b Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 134 (134 on master) products component: Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR26960-1-master-occt-64/Debian70-64/summary.html http://occt-tests/CR26960-1-master-occt-64/Windows-64-VC10/summary.html bugs vis bug25335 Testing cases: bugs modalg_6 bug26619 - FAILED http://occt-tests/CR26960-1-master-occt-64/Debian70-64/bugs/vis/bug26960.html http://occt-tests/CR26960-1-master-occt-64/Windows-64-VC10/bugs/vis/bug26960.html Testing on Linux: Total MEMORY difference: 89377741 / 89698264 [-0.36%] Total CPU difference: 19382.730000000007 / 19353.560000000063 [+0.15%] Testing on Windows: Total MEMORY difference: 54647666 / 54642917 [+0.01%] Total CPU difference: 17683.00975189883 / 18198.733457798822 [-2.83%] |
|
Dear vpa, Branch CR26960_1 has been rejected due to: - regressions/differences/improvements - failed test-case for issue |
|
Branch CR26960_1 has been updated forcibly by vpa. SHA-1: 7b895f18a0aaf680fe10b0f279e8ffe7e8e1b248 |
|
Dear Bugmaster, regressions were fixed. Please, test updated branch CR26960_1. |
|
Branch CR26960_1 has been updated forcibly by apv. SHA-1: 6a758f950cc5e1c1dfe6f812f1510e685b00fa5d |
|
Branch CR26960_1 has been rebased on the current master |
|
Dear BugMaster, Branch CR26960_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 6a758f950cc5e1c1dfe6f812f1510e685b00fa5d Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 134 (134 on master) products component: Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences: Not detetced Testing cases: bugs modalg_6 bug26619 - OK http://occt-tests/CR26960-1-master-occt-64/Debian70-64/bugs/vis/bug26960.html http://occt-tests/CR26960-1-master-occt-64/Windows-64-VC10/bugs/vis/bug26960.html Testing on Linux: Total MEMORY difference: 89214935 / 89703996 [-0.55%] Total CPU difference: 19214.97000000001 / 19353.80000000006 [-0.72%] Testing on Windows: Total MEMORY difference: 56930203 / 54607088 [+4.25%] Total CPU difference: 17836.65513679898 / 18177.31452049882 [-1.87%] |
|
Branch CR26960 has been deleted by kgv. SHA-1: a45da9d4fb1701bbd8b2268b64f491481197f3e8 |
|
Branch CR26960_1 has been deleted by kgv. SHA-1: 6a758f950cc5e1c1dfe6f812f1510e685b00fa5d |
occt: master 5396886c 2015-12-18 18:29:13
Committer: bugmaster Details Diff |
0026960: Visualization, TKOpenGl - update transformation of dynamically highlighted presentation - added method UpdateHighlightTrsf for immediate update of highlight presentation's transformation; - interfaces for immediate transformation update of corresponding presentations were added to entity owner classes; - test case for issue 0026960 |
Affected Issues 0026960 |
|
mod - src/AIS/AIS_InteractiveContext.cxx | Diff File | ||
mod - src/PrsMgr/PrsMgr_PresentationManager.cxx | Diff File | ||
mod - src/PrsMgr/PrsMgr_PresentationManager.hxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_EntityOwner.cxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_EntityOwner.hxx | Diff File | ||
mod - src/StdSelect/StdSelect_BRepOwner.cxx | Diff File | ||
mod - src/StdSelect/StdSelect_BRepOwner.hxx | Diff File | ||
add - tests/bugs/vis/bug26960 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-12-07 14:31 | kgv | New Issue | |
2015-12-07 14:31 | kgv | Assigned To | => kgv |
2015-12-07 14:35 | kgv | File Added: prs_ghost.png | |
2015-12-07 14:36 | git | Note Added: 0048796 | |
2015-12-15 12:37 | kgv | Assigned To | kgv => vpa |
2015-12-15 12:37 | kgv | Status | new => assigned |
2015-12-18 21:29 | git | Note Added: 0049319 | |
2015-12-21 13:23 | git | Note Added: 0049354 | |
2015-12-21 13:29 |
|
Note Added: 0049355 | |
2015-12-21 13:29 |
|
Assigned To | vpa => kgv |
2015-12-21 13:29 |
|
Status | assigned => resolved |
2015-12-21 13:55 | kgv | Note Added: 0049357 | |
2015-12-21 13:55 | kgv | Assigned To | kgv => bugmaster |
2015-12-21 13:55 | kgv | Status | resolved => reviewed |
2015-12-21 17:07 |
|
Assigned To | bugmaster => apv |
2015-12-22 14:12 |
|
Test case number | => bugs vis bug26960 |
2015-12-22 15:12 |
|
Note Added: 0049453 | |
2015-12-22 15:12 |
|
Assigned To | apv => vpa |
2015-12-22 15:12 |
|
Status | reviewed => assigned |
2015-12-22 15:13 |
|
Note Added: 0049454 | |
2015-12-22 16:28 | git | Note Added: 0049465 | |
2015-12-22 16:28 |
|
Status | assigned => resolved |
2015-12-22 16:30 |
|
Note Added: 0049466 | |
2015-12-22 16:30 |
|
Assigned To | vpa => bugmaster |
2015-12-22 16:30 |
|
Status | resolved => reviewed |
2015-12-22 16:38 |
|
Assigned To | bugmaster => apv |
2015-12-22 16:53 | git | Note Added: 0049468 | |
2015-12-22 16:54 |
|
Note Added: 0049469 | |
2015-12-23 11:31 |
|
Note Added: 0049492 | |
2015-12-23 11:31 |
|
Assigned To | apv => bugmaster |
2015-12-23 11:31 |
|
Status | reviewed => tested |
2015-12-25 19:04 | bugmaster | Changeset attached | => occt master 5396886c |
2015-12-25 19:04 | bugmaster | Status | tested => verified |
2015-12-25 19:04 | bugmaster | Resolution | open => fixed |
2016-04-17 13:46 | git | Note Added: 0052954 | |
2016-04-17 13:46 | git | Note Added: 0052955 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |
2016-10-20 11:49 | kgv | Relationship added | related to 0027986 |
2021-02-27 09:54 | kgv | Relationship added | related to 0032180 |