0026960: Visualization, TKOpenGl - update transformation of dynamically highlighted presentation

- added method UpdateHighlightTrsf for immediate update of highlight presentation's transformation;
- interfaces for immediate transformation update of corresponding presentations were added to entity owner classes;
- test case for issue #26960