src/AIS/AIS_InteractiveContext.cxx
@@ -1431,6 +1431,15 @@ void AIS_InteractiveContext::SetLocation (const Handle(AIS_InteractiveObject)& t
     Handle(StdSelect_ViewerSelector3d) aTempSel = myLocalContexts (myCurLocalIndex)->MainSelector();
     mgrSelector->Update (theIObj, aTempSel, Standard_False);
   }
+
+  // if the object or its part is highlighted dynamically, it is necessary to apply location transformation
+  // to its highlight structure immediately
+  if (!myLastPicked.IsNull() && myLastPicked->Selectable() == theIObj)
+  {
+    myLastPicked->UpdateHighlightTrsf (myMainVwr,
+                                       myMainPM,
+                                       theIObj->HasDisplayMode() ? theIObj->DisplayMode() : 0);
+  }
 }
 
 //=======================================================================
