src/PrsMgr/PrsMgr_PresentationManager.cxx
@@ -669,3 +669,65 @@ void PrsMgr_PresentationManager::SetShadingAspect (const Handle(PrsMgr_Presentab
     aPrs->SetShadingAspect (theShadingAspect);
   }
 }
+
+namespace
+{
+  // =======================================================================
+  // function : updatePrsTransformation
+  // purpose  : Internal funtion that scans thePrsList for shadow presentations
+  //            and applies transformation theTrsf to them in case if parent ID
+  //            of shadow presentation is equal to theRefId
+  // =======================================================================
+  void updatePrsTransformation (const PrsMgr_ListOfPresentations& thePrsList,
+                                const Standard_Integer theRefId,
+                                const Graphic3d_Mat4& theTrsf)
+  {
+    for (PrsMgr_ListOfPresentations::Iterator anIter (thePrsList); anIter.More(); anIter.Next())
+    {
+      const Handle(Prs3d_Presentation)& aPrs = anIter.Value();
+      if (aPrs.IsNull())
+        continue;
+
+      Handle(Prs3d_PresentationShadow) aShadowPrs = Handle(Prs3d_PresentationShadow)::DownCast (aPrs);
+      if (aShadowPrs.IsNull() || aShadowPrs->ParentId() != theRefId)
+        continue;
+
+      aShadowPrs->CStructure()->Transformation = theTrsf;
+    }
+  }
+}
+
+// =======================================================================
+// function : UpdateHighlightTrsf
+// purpose  :
+// =======================================================================
+void PrsMgr_PresentationManager::UpdateHighlightTrsf (const Handle(V3d_Viewer)& theViewer,
+                                                      const Handle(PrsMgr_PresentableObject)& theObj,
+                                                      const Standard_Integer theMode,
+                                                      const Handle(PrsMgr_PresentableObject)& theSelObj)
+{
+  if (theObj.IsNull())
+    return;
+
+  const Handle(Prs3d_Presentation)& aBasePrs = Presentation (theObj, theMode, Standard_False)->Presentation();
+  const Handle(Prs3d_Presentation)& aParentPrs = theSelObj.IsNull() ?
+    aBasePrs : Presentation (theSelObj, theMode, Standard_False)->Presentation();
+  const Standard_Integer aParentId = aParentPrs->CStructure()->Id;
+
+  updatePrsTransformation (myImmediateList, aParentId, aBasePrs->CStructure()->Transformation);
+
+  if (!myViewDependentImmediateList.IsEmpty())
+  {
+    for (theViewer->InitActiveViews(); theViewer->MoreActiveViews(); theViewer->NextActiveViews())
+    {
+      const Handle(Graphic3d_CView)& aView = theViewer->ActiveView()->View();
+      Handle(Graphic3d_Structure) aViewDepParentPrs;
+      if (aView->IsComputed (aParentId, aViewDepParentPrs))
+      {
+        updatePrsTransformation (myViewDependentImmediateList,
+                                 aViewDepParentPrs->CStructure()->Id,
+                                 aBasePrs->CStructure()->Transformation);
+      }
+    }
+  }
+}
