src/SelectMgr/SelectMgr_EntityOwner.cxx
@@ -164,3 +164,17 @@ void SelectMgr_EntityOwner::SetZLayer (const Standard_Integer )
 {
   //
 }
+
+//=======================================================================
+//function : UpdateHighlightTrsf
+//purpose  :
+//=======================================================================
+void SelectMgr_EntityOwner::UpdateHighlightTrsf (const Handle(V3d_Viewer)& theViewer,
+                                                 const Handle(PrsMgr_PresentationManager3d)& theManager,
+                                                 const Standard_Integer theDispMode)
+{
+  if (mySelectable == NULL)
+    return;
+
+  theManager->UpdateHighlightTrsf (theViewer, mySelectable, theDispMode);
+}
