src/StdSelect/StdSelect_BRepOwner.cxx
@@ -244,3 +244,17 @@ void StdSelect_BRepOwner::SetZLayer (const Graphic3d_ZLayerId theLayerId)
     myPrsSh->SetZLayer (theLayerId);
   }
 }
+
+//=======================================================================
+//function : UpdateHighlightTrsf
+//purpose  :
+//=======================================================================
+void StdSelect_BRepOwner::UpdateHighlightTrsf (const Handle(V3d_Viewer)& theViewer,
+                                               const Handle(PrsMgr_PresentationManager3d)& theManager,
+                                               const Standard_Integer theDispMode)
+{
+  if (myPrsSh.IsNull() && Selectable().IsNull())
+    return;
+
+  theManager->UpdateHighlightTrsf (theViewer, Selectable(), theDispMode, myPrsSh);
+}
